5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_2723.log
== SUBMITION (2019-04-11 12:05:25) 
-- CODE:
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- EXECUTION TIME:
0.129733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2723/main.py", line 4, in <module>
    if (a>b>c or a>c>b):
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:05:55) 
-- CODE:
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (a>b>c or a>c>b):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:06:21) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- EXECUTION TIME:
0.256986
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:25:03) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:25:11) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:25:24) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- EXECUTION TIME:
0.117023
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:05:15) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:05:25) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:05:28) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a>b>c or a>c>b):
	print(a)
if	(b>a>c or b>c>a):
   print(b)
if (c>a>b or c>b>a):
	print(c)
-- EXECUTION TIME:
0.097652
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
